# Search-Index

./: CMakeLists.txt
Test/: test.cpp  test.h  test_Search.h
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  header.h  threadpool.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
